test/compile-errors/extern-type-errors.crow
a extern

r record
	a a

b<a> extern
